- Name abbreviations are available in most situations.
- New command line option -m, which specify configuration file to load.
- Client will receive final score when ghost is destroyed.
- Added 'FreeBSD 4.3R' in makefile
- Fixed a bug where Morgoth summoned townies etc.
- If one kills the same unique more than once, it'll be handled as 'cloned'.
- DM can specify monsters to summon by ID number.
- Fixed: Store command when sunrise/sunset crashed. (Yakina)
- Port numbers are now changeable with configuration file. (Yakina)
- Other small bug-fixes, typos and ameliorations(deteriorations?)
[client changes]
- You can type, for example, '15k' for 15000au and '3m' for 3,000,000au.
- You can see your gold as soon as you enter a store.
- You can see other players' equipment.(*)
- You can choose to be a bat(wo)man when creating new character.(*)
- 'no-direction cancels' bug is fixed.
- New command '/', which can handle miscellaneous types of items.
- You can scroll chat-history with ctrl-o.
- "'" command is supported(see above).
- Graphics bug in win-client is fixed (by Tanix)
 
19/11/2001 (Jir)
- Some xp bonus to encourage partying (C.Blue's idea)
- Revised conditions to check equipments.
- Bugfix on /ignore command code.

20/11/2001 (Jir)
- You get stunned, confused and also drop some items when theft fails.
- I have put a bug where OOD monsters are summoned; now fixed (thx Tanix)

22/11/2001 (Jir)
- You can use {@O} inscription to control auto-retaliator.
- Neighboring monsters will try to interfere your attempt to fire.

23/11/2001 (Jir)
- Items with too long names are displayed with abbreviated names.
- New admin commands: /lua, /recall
- Multiple-melee attacks are efficiently handled now.

23/11/2001 (Tanix [Jir wrote this log])
- Recall/stair GoI message is removed.

24/11/2001
- Lua scripting

25/11/2001 (Jir)
- Uniques can resurrect after beating Morgoth.
- Kings/Queens will be alarmed of retire_timer.
- Players under lv-5 cannot throw items (anti-cheeze).