@@ -42,6 +42,11 @@ SECRET_DUNGEON_MASTER = true
 # to the earlier game versions.
 FPS = 60
 
+# Minimum dungeon lvl to make chars static on leaving game.
+# default is 8.. formula is N-1 or 8 - 1 X 50 = 350FT
+# nobody 350ft or below will static the dungeon lvl if they quit the game.
+MIN_UNSTATIC_LEVEL = 8
+
 # Option : give mages an extra hitpoint per level.  This makes the game
 # a bit easier for the mage, especially in the beginning.
 MAGE_HITPOINT_BONUS = true
